syntax = "proto3";

option csharp_namespace = "TimeCat.Proto";

import "google/protobuf/timestamp.proto";

package common;

service CommonService {
    rpc initialize (Void) returns (Void);
 // void initialize (Request) returns (Response);
}

message Void {
}