syntax = "proto3";

option csharp_namespace = "TimeCat.Proto.Services";

import "google/protobuf/timestamp.proto";

service CategoryService {
	// TODO: define category rpc
}
