syntax = "proto3";

option csharp_namespace = "TimeCat.Proto.Services";

import "google/protobuf/timestamp.proto";

service DetailService {
	// TODO: define detail rpc
}
